Fix nav jumping with the fixed header; fixed sort order of work pieces

--- a/root/apps/mainsite/static/css/screen.css
+++ b/root/apps/mainsite/static/css/screen.css
@@ -20,7 +20,11 @@ html {
     height: 107px;
 }
 .container-primary section.main {
-    padding-top: 107px; /* For the nav jumping to work */
+    /*For the nav jumping to work */
+    /*padding-top: 107px; */
+}
+body {
+    margin-top: 107px;
 }
 
 #home .header {
